--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@angular/router": "~8.2.14",
     "@popperjs/core": "^2.6.0",
     "bootstrap": "^4.5.3",
+    "firebase": ">= 5.5.7 <8",
     "jquery": "^3.5.1",
+    "postcss-import": "^14.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "firebase": ">= 5.5.7 <8"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.29",
