--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.5.1",
     "postcss-import": "^14.0.0",
     "rxjs": "~6.4.0",
+    "schematics-scss-migrate": "^1.3.13",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
